# asiayo-rest-sql

./: README.md  docker-compose.yml  pyproject.toml
doc/: README_dev.md  answers.sql
project/: Dockerfile  alembic.ini  pyproject.toml
project/app/: db.py  main.py  models.py
project/migrations/: env.py
project/migrations/versions/: 2e0b7e564d62_init.py  6f422ae3403f_init.py  a33a41c5e139_init.py
project/tests/: test_currency.py
tests/: test_asiayo_rest_sql.py
