[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Lance Chang"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
asyncpg = "^0.24.0"
sqlmodel = "^0.0.4"
alembic = "^1.7.4"
python-dotenv = "^0.19.1"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
httpx = "^0.20.0"
requests = "^2.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
